[project]
name = "oos-tracker"
version = "0.1.0"
description = "Weekly out-of-stock checker for Megababe SKUs across 11 retailers"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
